<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".Tailor_sign_in">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backArrowImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/registerLink1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/backArrowImage1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/backArrowImage1"
            app:layout_constraintTop_toTopOf="@+id/backArrowImage1" />

        <TextView
            android:id="@+id/signup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078" />

        <TextView
            android:id="@+id/ezsilai1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_to_ez_sial"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/signup1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signup1"
            app:layout_constraintTop_toBottomOf="@+id/signup1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView1"
            android:layout_width="374dp"
            android:layout_height="515dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/cardview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ezsilai1"
            app:layout_constraintVertical_bias="1.0">


            <EditText
                android:id="@+id/email1"
                style="@style/customInput"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxEms="20"
                app:layout_constraintBottom_toTopOf="@+id/signup_btn1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32" />

            <EditText
                android:id="@+id/editText131"
                style="@style/customInput"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_key"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxEms="25"
                app:layout_constraintEnd_toEndOf="@+id/email1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email1"
                app:layout_constraintTop_toBottomOf="@+id/email1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn1"
                style="@style/darkBlueButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Sign In"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editText131"
                app:layout_constraintHorizontal_bias="0.402"
                app:layout_constraintStart_toStartOf="@+id/editText131"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googlebtn1"
                style="@style/WhiteButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/google"
                android:text="@string/continue_with_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signup_btn1"
                app:layout_constraintHorizontal_bias="0.623"
                app:layout_constraintStart_toStartOf="@+id/signup_btn1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.742" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/facebookbtn1"
                style="@style/WhiteButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/fb"
                android:drawableEnd="@drawable/baseline_arrow_forward"
                android:drawablePadding="15dp"
                android:text="@string/continue_with_facebook"
                app:layout_constraintEnd_toEndOf="@+id/googlebtn1"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/googlebtn1"
                app:layout_constraintTop_toBottomOf="@+id/googlebtn1" />

            <TextView
                android:id="@+id/forgetPassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Forget Password"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/editText131"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintStart_toStartOf="@+id/editText131"
                app:layout_constraintTop_toTopOf="@+id/editText131" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>